--- a/main.css
+++ b/main.css
@@ -4,8 +4,10 @@
 body {
   margin-top:20px;
   font-family: Osaka;
-  background-color: ghostwhite;
-  color: inherit;
+  /* background-color: ghostwhite; */
+  /* color: inherit; */
+  color: green;
+  background-color: tan;
 }
 
 h2, h3, h5 {
